fix mobile stacking issue on media block bottom alignment

--- a/pattern-lab/source/_patterns/03-components/media-block/_media-block.scss
+++ b/pattern-lab/source/_patterns/03-components/media-block/_media-block.scss
@@ -156,6 +156,7 @@
     }
   }
   &--media-on-bottom {
+    display: flex;
     flex-direction: column-reverse;
     > div {
       width: 100%;
